add new chenging in index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="this is my css Checkpoint" />
+    <meta name="description" content="this is my new css Checkpoint" />
     <link rel="stylesheet" href="./style.css" />
-    <title>css-Checkpoint</title>
+    <title>my Checkpoint</title>
   </head>
   <body>
     <div class="container">
